--- a/appinfo.json
+++ b/appinfo.json
@@ -10,6 +10,11 @@
         "media": [
             {
                 "file": "fonts/pn-light.ttf",
+                "name": "PN_LIGHT_18",
+                "type": "font"
+            },
+            {
+                "file": "fonts/pn-light.ttf",
                 "name": "PN_LIGHT_36",
                 "type": "font"
             },
